syntax = "proto3";

package transcription;


service TranscriptionService {
  rpc Transcribe (AudioChunk) returns (TranscriptionResult);
}


message AudioChunk {
  string audio_data = 1; // Base64 encoded audio data
}

message TranscriptionResult {
  string transcript = 1;
}
